# clipman

./: CHANGELOG.md  Cargo.toml  README.md  main.go  selector.go  storer.go
docs/: clipman.1
src/: actions.rs  main.rs  selector.rs
