[package]
name = "clipman"
version = "2.0.0"
authors = ["yory8 <yory8@users.noreply.github.com>"]
edition = "2018"

[[bin]]
path = "src/main.rs"
name = "clipman"

[dependencies]
dirs = "2"
failure = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.10"
structopt = { version = "0.3", features = ["wrap_help"] }
wl-clipboard-rs = { git = "https://github.com/yory8/wl-clipboard-rs", branch = "multi" }
